# Particle

./: .gitignore  README.md
Particle2.0/: Particle.pro  Particle.pro.user.20  Particle.pro.user.4.8-pre1  Particle.pro.user.4445ce0.20  Particle.pro.user.6dc2e8b  Particle.pro.user.bUHkky  Particle.pro.user.d197cd4  Particle.pro.user.d33eef5  Particle.pro.user.d33eef5.4.8-pre1  Particle.pro.user.mGJIFM  colloid.cpp  colloidparticle.cpp  colloidparticle.h  computemethod.cpp  dipole.cpp  environment.h  field.cpp  macroparticle.cpp  macroparticle.h  main.cpp  material.h  maths.cpp  maths.h  particle.cpp  particlesystem.cpp  shape.cpp  shape.h  staticfield.cpp
src/: CMakeLists.txt  colloid.cpp  colloid.h  colloidparticle.cpp  computemethod.h  dipole.h  environment.cpp  environment.h  field.h  main.cpp  material.cpp  particle.h  particlesystem.h  print.h  rotatingfield.cpp  rotatingfield.h  runmanager.cpp  runmanager.h  selfconsistentmethod.cpp  selfconsistentmethod.h  staticfield.h
Обработка данных/: SCDf.txt  U.py  Ue.txt  Ufull.txt  Us.txt  grafUe.py  grafUfull.py  grafUi.py  grafUs.py  loggrafUe.py  loggrafUfull.py  loggrafUs.py  logmain.py  main.py  result.txt
